--- a/OpenalSoft/CMakeLists.txt
+++ b/OpenalSoft/CMakeLists.txt
@@ -20,6 +20,6 @@ if(ANDROID)
   #endif()
   
   set_target_properties(${target_name} PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libopenal.so"
+    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_android/libopenal.so"
   )
 endif()
