--- a/OggDecoder/CMakeLists.txt
+++ b/OggDecoder/CMakeLists.txt
@@ -27,26 +27,15 @@ if(ANDROID)
   set_target_properties(${target_name} PROPERTIES
     IMPORTED_LOCATION "${PREBUILT_ROOT}/libogg.so"
   )
-
-  add_library(libogg STATIC IMPORTED)
-  set_target_properties(libogg PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libogg.so"
-  )
-  add_library(libvorbis SHARED IMPORTED)
-  set_target_properties(libvorbis PROPERTIES
+  set_property(TARGET ${target_name} APPEND PROPERTY 
     IMPORTED_LOCATION "${PREBUILT_ROOT}/libvorbis.so"
   )
-  add_library(libvorbisfile SHARED IMPORTED)
-  set_target_properties(libvorbisfile PROPERTIES
+  set_property(TARGET ${target_name} APPEND PROPERTY 
     IMPORTED_LOCATION "${PREBUILT_ROOT}/libvorbisfile.so"
   )
-  set_property(TARGET libvorbis APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libogg")
-  set_property(TARGET libvorbisfile APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libogg")
-  
-  set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libogg")
-  set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libvorbis")
-  set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libvorbisfile")
-  
+  set_property(TARGET ${target_name} APPEND PROPERTY 
+    IMPORTED_LOCATION "${PREBUILT_ROOT}/libvorbisenc.so"
+  )
 elseif(MACOSX OR IOS)
   if(MACOSX)
     set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_mac)
@@ -90,11 +79,19 @@ elseif(MACOSX OR IOS)
   endif()
 
   # mark multi libs link into single one: "${target_name}"
-  set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libogg")
-  set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libvorbis")
+  set_property(TARGET ${target_name} APPEND PROPERTY
+    INTERFACE_LINK_LIBRARIES "libogg"
+  )
+  set_property(TARGET ${target_name} APPEND PROPERTY
+    INTERFACE_LINK_LIBRARIES "libvorbis"
+  )
   if(MACOSX)
-    set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libvorbisfile")
-    set_property(TARGET ${target_name} APPEND PROPERTY INTERFACE_LINK_LIBRARIES "libvorbisenc")
+    set_property(TARGET ${target_name} APPEND PROPERTY
+      INTERFACE_LINK_LIBRARIES "libvorbisfile"
+    )
+    set_property(TARGET ${target_name} APPEND PROPERTY
+      INTERFACE_LINK_LIBRARIES "libvorbisenc"
+    )
   endif()
 
 endif()
