--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "NativeFileDialog/src"]
 	path = NativeFileDialog/src
 	url = https://github.com/mlabbe/nativefiledialog.git
+[submodule "BurstLinker/src"]
+	path = BurstLinker/src
+	url = https://github.com/Xrysnow/BurstLinker.git
+[submodule "cLaTeXMath/src"]
+	path = cLaTeXMath/src
+	url = https://github.com/NanoMichael/cLaTeXMath.git
