--- a/ffmpeg/CMakeLists.txt
+++ b/ffmpeg/CMakeLists.txt
@@ -57,8 +57,8 @@ if(WINDOWS)
     INTERFACE_LINK_LIBRARIES "${PREBUILT_ROOT}/swscale.lib")
 elseif(ANDROID)
   set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_android/${ANDROID_ABI})
-  if(NOT EXISTS PREBUILT_ROOT)
-    message(FATAL_ERROR "no prebuilt library for ${ANDROID_ABI}")
+  if(NOT EXISTS ${PREBUILT_ROOT})
+    message(FATAL_ERROR "no prebuilt library for ${ANDROID_ABI} at ${PREBUILT_ROOT}")
   endif()
   set_target_properties(${target_name} PROPERTIES
     IMPORTED_LOCATION "${PREBUILT_ROOT}/libffmpeg.so"
