--- a/ffmpeg/CMakeLists.txt
+++ b/ffmpeg/CMakeLists.txt
@@ -61,70 +61,52 @@ elseif(ANDROID)
     message(FATAL_ERROR "no prebuilt library for ${ANDROID_ABI} at ${PREBUILT_ROOT}")
   endif()
   set_target_properties(${target_name} PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libffmpeg.so"
+    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavcodec.so"
   )
+  set(FFMPEG_LIBS
+    avdevice
+    avfilter
+    avformat
+    avutil
+    swresample
+    swscale
+  )
+  foreach(ff_lib ${FFMPEG_LIBS})
+    set(ff_lib_target ${target_name}_${ff_lib})
+    add_library(${ff_lib_target} SHARED IMPORTED GLOBAL)
+    set_target_properties(${ff_lib_target} PROPERTIES
+      IMPORTED_LOCATION "${PREBUILT_ROOT}/lib${ff_lib}.so"
+    )
+    set_property(TARGET ${target_name} APPEND PROPERTY
+      INTERFACE_LINK_LIBRARIES ${ff_lib_target}
+    )
+  endforeach()
 elseif(MACOSX OR IOS)
   if(MACOSX)
     set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_mac)
   elseif(IOS)
     set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_ios)
   endif()
-  
-  #if(NOT EXISTS PREBUILT_ROOT)
-  #  message(FATAL_ERROR "no prebuilt library at ${PREBUILT_ROOT}")
-  #endif()
+
   set_target_properties(${target_name} PROPERTIES
     IMPORTED_LOCATION "${PREBUILT_ROOT}/libavcodec.a"
   )
-  # multi libs
-  add_library(libavdevice STATIC IMPORTED)
-  set_target_properties(libavdevice PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavdevice.a"
+  set(FFMPEG_LIBS
+    avdevice
+    avfilter
+    avformat
+    avutil
+    swresample
+    swscale
   )
-  add_library(libavfilter STATIC IMPORTED)
-  set_target_properties(libavfilter PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavfilter.a"
-  )
-  add_library(libavformat STATIC IMPORTED)
-  set_target_properties(libavformat PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavformat.a"
-  )
-  add_library(libavutil STATIC IMPORTED)
-  set_target_properties(libavutil PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavutil.a"
-  )
-  add_library(libswresample STATIC IMPORTED)
-  set_target_properties(libswresample PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libswresample.a"
-  )
-  add_library(libswscale STATIC IMPORTED)
-  set_target_properties(libswscale PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libswscale.a"
-  )
-  add_library(libavcodec STATIC IMPORTED)
-  set_target_properties(libavcodec PROPERTIES
-    IMPORTED_LOCATION "${PREBUILT_ROOT}/libavcodec.a"
-  )
-  # mark multi libs link into single one: "${target_name}"
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libavcodec"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libavdevice"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libavfilter"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libavformat"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libavutil"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libswresample"
-  )
-  set_property(TARGET ${target_name} APPEND PROPERTY
-    INTERFACE_LINK_LIBRARIES "libswscale"
-  )
+  foreach(ff_lib ${FFMPEG_LIBS})
+    set(ff_lib_target ${target_name}_${ff_lib})
+    add_library(${ff_lib_target} STATIC IMPORTED)
+    set_target_properties(${ff_lib_target} PROPERTIES
+      IMPORTED_LOCATION "${PREBUILT_ROOT}/lib${ff_lib}.a"
+    )
+    set_property(TARGET ${target_name} APPEND PROPERTY
+      INTERFACE_LINK_LIBRARIES ${ff_lib_target}
+    )
+  endforeach()
 endif()
