--- a/cLaTeXMath/CMakeLists.txt
+++ b/cLaTeXMath/CMakeLists.txt
@@ -14,6 +14,7 @@ file(GLOB_RECURSE ${target_name}_src
 add_library(${target_name} STATIC
   ${${target_name}_src}
 )
+use_cocos2dx_compile_options(${target_name})
 
 target_include_directories(${target_name} PRIVATE ${src_dir})
 target_include_directories(${target_name} INTERFACE ${src_dir})
@@ -24,3 +25,7 @@ set_target_properties(${target_name}
   LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
   FOLDER "External"
 )
+
+if(XCODE OR VS)
+  cocos_mark_code_files(${target_name})
+endif()
