--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libzippp/src"]
 	path = libzippp/src
 	url = https://github.com/ctabin/libzippp.git
+[submodule "FairyGUI/src"]
+	path = FairyGUI/src
+	url = https://github.com/fairygui/FairyGUI-cocos2dx.git
