--- a/OpenalSoft/CMakeLists.txt
+++ b/OpenalSoft/CMakeLists.txt
@@ -6,18 +6,21 @@ if(NOT APPLE)
 
   project(${lib_name})
 
-  if(ANDROID)
+  if(ANDROID OR LINUX)
     add_library(${target_name} SHARED IMPORTED GLOBAL)
     set_target_properties(${target_name} PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include
     )
-    
-    set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_android/${ANDROID_ABI})
-    
-    if(NOT EXISTS ${PREBUILT_ROOT})
-      message(FATAL_ERROR "no prebuilt library for ${ANDROID_ABI} at ${PREBUILT_ROOT}")
+
+    if(ANDROID)
+      set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_android/${ANDROID_ABI})
+      if(NOT EXISTS ${PREBUILT_ROOT})
+        message(FATAL_ERROR "no prebuilt library for ${ANDROID_ABI} at ${PREBUILT_ROOT}")
+      endif()
+    else()
+      set(PREBUILT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/prebuilt_linux)
     endif()
-    
+
     set_target_properties(${target_name} PROPERTIES
       IMPORTED_LOCATION "${PREBUILT_ROOT}/libopenal.so"
     )
