--- a/NativeFileDialog/CMakeLists.txt
+++ b/NativeFileDialog/CMakeLists.txt
@@ -25,6 +25,15 @@ add_library(${target_name} STATIC
   ${${target_name}_src}
 )
 
+if(LINUX)
+  find_package (PkgConfig REQUIRED)
+  pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+  include_directories(${GTK3_INCLUDE_DIRS})
+  link_directories(${GTK3_LIBRARY_DIRS})
+  add_definitions(${GTK3_CFLAGS_OTHER})
+  target_link_libraries(${target_name} ${GTK3_LIBRARIES})
+endif()
+
 target_include_directories(${target_name} PRIVATE ${src_dir} ${inc_dir})
 target_include_directories(${target_name} INTERFACE ${inc_dir})
 
