--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "FairyGUI/src"]
 	path = FairyGUI/src
 	url = https://github.com/fairygui/FairyGUI-cocos2dx.git
+[submodule "MicroTeX/src"]
+	path = MicroTeX/src
+	url = https://github.com/Xrysnow/MicroTeX.git
